export class Appointment {
  date: Date;
  title: string;
  details?: string;
}
