export class Feeding {
  leftBreast: string;
  rightBreast: string;
  total: string;
  bottle: number;
  solid: number;
  date: Date;
}
