export class Poo {
  color: string;
  consistency: string;
  date: Date;
}
