export class User {
  id?: string;
  familyName: string;
  email: string;
  password: string;
}
